tests/snapshots/config/full_override.snap
---
source: tests/config_parsing.rs
expression: config
input_file: tests/fixtures/config/full_override.toml
---
Config {
    code_line_length: Some(
        100,
    ),
    docstring_line_length: Some(
        60,
    ),
    docstring_structured_policy: DocstringLineLength,
    rules: RuleConfigs {
        collection_layout: CollectionLayoutConfig {
            enabled: false,
            max_atomics_per_line: Some(
                3,
            ),
        },
        alphabetize: ToggleOnly {
            enabled: false,
        },
        strip_trailing_commas: ToggleOnly {
            enabled: false,
        },
        no_single_line_docstrings: ToggleOnly {
            enabled: false,
        },
        multi_line_docstrings: ToggleOnly {
            enabled: false,
        },
        blank_lines: ToggleOnly {
            enabled: false,
        },
        bare_import_allowlist: BareImportAllowlistConfig {
            allow: [
                "scipy",
                "torch",
            ],
            enabled: false,
        },
        match_case_align: AlignmentConfig {
            enabled: false,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_imports: AlignmentConfig {
            enabled: false,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_colons: AlignmentConfig {
            enabled: false,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_equals: AlignmentConfig {
            enabled: false,
            max_shift: 8,
            max_shift_policy: Split,
        },
        singleton_rule: ToggleOnly {
            enabled: false,
        },
        loose_constants: LooseConstantsConfig {
            allow: [
                "LOG_LEVEL",
            ],
            enabled: false,
        },
        no_step_narration: ToggleOnly {
            enabled: false,
        },
    },
    target_version: Some(
        PythonVersion {
            major: 3,
            minor: 14,
        },
    ),
}
