tests/snapshots/config/target_version_only.snap
---
source: tests/config_parsing.rs
expression: config
input_file: tests/fixtures/config/target_version_only.toml
---
Config {
    code_line_length: Some(
        88,
    ),
    docstring_line_length: Some(
        76,
    ),
    docstring_structured_policy: CodeLineLength,
    rules: RuleConfigs {
        collection_layout: CollectionLayoutConfig {
            enabled: true,
            max_atomics_per_line: Some(
                8,
            ),
        },
        alphabetize: ToggleOnly {
            enabled: true,
        },
        strip_trailing_commas: ToggleOnly {
            enabled: true,
        },
        no_single_line_docstrings: ToggleOnly {
            enabled: true,
        },
        multi_line_docstrings: ToggleOnly {
            enabled: true,
        },
        blank_lines: ToggleOnly {
            enabled: true,
        },
        bare_import_allowlist: BareImportAllowlistConfig {
            allow: [
                "numpy",
                "pandas",
            ],
            enabled: true,
        },
        match_case_align: AlignmentConfig {
            enabled: true,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_imports: AlignmentConfig {
            enabled: true,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_colons: AlignmentConfig {
            enabled: true,
            max_shift: 8,
            max_shift_policy: Split,
        },
        align_equals: AlignmentConfig {
            enabled: true,
            max_shift: 8,
            max_shift_policy: Split,
        },
        singleton_rule: ToggleOnly {
            enabled: true,
        },
        loose_constants: LooseConstantsConfig {
            allow: [],
            enabled: true,
        },
        no_step_narration: ToggleOnly {
            enabled: true,
        },
        legacy_union_syntax: ToggleOnly {
            enabled: true,
        },
    },
    target_version: Some(
        PythonVersion {
            major: 3,
            minor: 10,
        },
    ),
}
